test/cases/compile_errors/missing_digit_after_base.zig
export fn entry() void {
    const x = @as(usize, -0x);
    _ = x;
}

// error
//
// :2:27: error: expected a digit after base prefix
